2008-02-03  Al Stone <ahs3@debian.org>

	* src/Makefile.am: correct the list of source files for libski.
	* src/iaexec_dec.sed: rename of memory.h to simmem.h was not
	  accounted for in this script.

2008-02-03  Al Stone <ahs3@debian.org>

	* Applied Dan Horak's patches to build and distribute gski better.
	  (from sf.net).
	* Applied Dan's patch to move sim_root, sim_root_len out of the
	  libraries.
	* Applied Dan's patch to combine libski and libskiui into a
	  single library.

2008-02-03  Al Stone <ahs3@debian.org>

	* doc/ski-manual-v1.0.pdf: removed.  Replaced with doc/manual/*
	* doc/manual: added.  Replaces old PDF file with OpenOffice versions
	  of the same manual.  We can now include this as part of the Debian
	  package since we now have source.
	* src/Makefile.am: include gski.glade in the distribution archive
	  (from Dan Horak).

2008-01-23  Ian Wienand  <ianw@ieee.org>

	* macros/debian.m4: remove (uneeded)
	* macros/sed.m4: remove (in autoconf)
	* Makefile.am: conditionally make links to x/gtk programs
	* configure.ac: remove motif test, re-arrange X/GTK tests to
	require enabling with --with-gtk/--with-x11
	* macros/motif.m4: abstract motif tests from configure.ac to here
	* src/Makefile.am: conditional build x/gski
	* src/ski.c: fixes for conditional build
	* src/ui.c: as above
	* src/ssGtk.c: as above

2008-01-22  Ian Wienand  <ianw@ieee.org>

	[ Remove libltdl subdir and build library in directly ]

	* aclocal.m4: remove (autogenerated)
	* libltdl/*: remove
	* src/libltdl.{c|h}: add
	* src/memory.h: move to simmem.h to avoid conflict with system
	memory.h
	* src/memory.c: move to simmem.c in line with above
	* src/*.c: memory.h->simmem.h
	* Makefile.am: remove references to libltdl/
	* configure.ac: remove references to libltdl/
	* src/Makefile.am: add and build ltdl.{c|h}, simmem changes 

2008-01-22  Ian Wienand  <ianw@ieee.org>

	* Makefile.am: create install hook, don't strip binary, install
	links
