@@ -44,7 +44,7 @@ AM_CONDITIONAL(FREEBSD, test "$HOST_OS" = freebsd)
 #
 SKI_MAJOR_VERSION=1
 SKI_MINOR_VERSION=3
-SKI_MICRO_VERSION=1
+SKI_MICRO_VERSION=2
 SKI_INTERFACE_AGE=0
 SKI_BINARY_AGE=0
 SKI_RELEASE=gplv2
