@@ -757,7 +757,7 @@
     <property name="type_hint">GDK_WINDOW_TYPE_HINT_DIALOG</property>
     <property name="has_separator">False</property>
     <property name="name">Ski Simulator</property>
-    <property name="version">1.3.1</property>
+    <property name="version">1.3.2</property>
     <property name="copyright" translatable="yes">Copyright (C) 1995-2007, Hewlett-Packard Development Company, L.P.</property>
     <property name="comments" translatable="yes">Ski is an instruction simulator designed to execute and test ia64
  code on non-ia64 machines.</property>
